--- a/search.html
+++ b/search.html
@@ -41,6 +41,12 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
+        <li class="right" >
+          <a href="rb-modindex.html" title="Ruby Module Index"
+             >modules</a> |</li>
+        <li class="right" >
           <a href="go-pkgindex.html" title="Golang Package Index"
              >packages</a> |</li>
         <li><a href="index.html">bsdconv 11.1 documentation</a> &raquo;</li> 
@@ -91,6 +97,12 @@
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
+        <li class="right" >
+          <a href="rb-modindex.html" title="Ruby Module Index"
+             >modules</a> |</li>
         <li class="right" >
           <a href="go-pkgindex.html" title="Golang Package Index"
              >packages</a> |</li>
